// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Generic/Navbar Logged In 1`] = `
<header
  className="sticky top-0 z-50 flex w-full flex-col justify-center bg-white px-4 sm:flex-row"
>
  <section
    className="mx-auto w-full max-w-[82vw] flex h-[70px] items-center justify-between"
  >
    <a
      aria-label="Homepage"
      href="/home"
      title="Homepage"
    >
      <div
        style={
          Object {
            "height": 30,
            "width": 108,
          }
        }
      />
    </a>
    <div
      className="hidden items-center sm:flex sm:gap-4 lg:gap-8"
    >
      <div
        className="absolute top-4 left-[50%] translate-x-[-50%]"
      >
        <div
          className="block sm:hidden relative w-fit"
          data-headlessui-state=""
        >
          <button
            aria-expanded={false}
            className="flex items-center justify-between p-2"
            data-headlessui-state=""
            id="headlessui-popover-button-:r3r:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 16,
                }
              }
            />
            <span
              className="text-14-light mr-2 whitespace-nowrap text-sm uppercase text-darkCustom"
            >
              English
            </span>
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 8,
                }
              }
            />
          </button>
        </div>
      </div>
      <div>
        <div
          className="font-regular uppercase xl:w-full hover:opacity-50 text-darkCustom sm:mr-2 tour-help"
        >
          <a
            href="https://terramatchsupport.zendesk.com/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="flex items-center"
            >
              <span
                className="whitespace-nowrap text-darkCustom text-14-light"
                data-testid="txt"
              >
                Help Center
              </span>
            </div>
          </a>
        </div>
      </div>
      <div
        className="hidden h-4 w-[1px] bg-neutral-500 sm:mx-2 sm:block"
      />
      <div
        className="font-regular uppercase xl:w-full hover:opacity-50"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="flex items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 16,
                }
              }
            />
            <span
              className="whitespace-nowrap text-darkCustom text-14-light"
              data-testid="txt"
            >
              Logout
            </span>
          </div>
        </a>
      </div>
      <div
        className="hidden sm:block relative w-fit"
        data-headlessui-state=""
      >
        <button
          aria-expanded={false}
          className="flex items-center justify-between p-2"
          data-headlessui-state=""
          id="headlessui-popover-button-:r40:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          type="button"
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 16,
              }
            }
          />
          <span
            className="text-14-light mr-2 whitespace-nowrap text-sm uppercase text-darkCustom"
          >
            English
          </span>
          <div
            style={
              Object {
                "height": undefined,
                "width": 8,
              }
            }
          />
        </button>
      </div>
    </div>
    <button
      className="flex items-center justify-center rounded-full hover:bg-opacity-60 tour-menu-button block sm:hidden"
      disabled={false}
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "height": 16,
            "width": 28,
          }
        }
      />
    </button>
  </section>
</header>
`;

exports[`Storyshots Components/Generic/Navbar Logged Out 1`] = `
<header
  className="sticky top-0 z-50 flex w-full flex-col justify-center bg-white px-4 sm:flex-row"
>
  <section
    className="mx-auto w-full max-w-[82vw] flex h-[70px] items-center justify-between"
  >
    <a
      aria-label="Homepage"
      href="/home"
      title="Homepage"
    >
      <div
        style={
          Object {
            "height": 30,
            "width": 108,
          }
        }
      />
    </a>
    <div
      className="hidden items-center sm:flex sm:gap-4 lg:gap-8"
    >
      <div
        className="absolute top-4 left-[50%] translate-x-[-50%]"
      >
        <div
          className="block sm:hidden relative w-fit"
          data-headlessui-state=""
        >
          <button
            aria-expanded={false}
            className="flex items-center justify-between p-2"
            data-headlessui-state=""
            id="headlessui-popover-button-:r45:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 16,
                }
              }
            />
            <span
              className="text-14-light mr-2 whitespace-nowrap text-sm uppercase text-darkCustom"
            >
              English
            </span>
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 8,
                }
              }
            />
          </button>
        </div>
      </div>
      <div>
        <div
          className="font-regular uppercase xl:w-full hover:opacity-50 text-darkCustom sm:mr-2"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="flex items-center"
            >
              <span
                className="whitespace-nowrap text-darkCustom text-14-light"
                data-testid="txt"
              >
                Home
              </span>
            </div>
          </a>
        </div>
      </div>
      <div>
        <div
          className="font-regular uppercase xl:w-full hover:opacity-50 text-darkCustom sm:mr-2"
        >
          <a
            href="https://terramatchsupport.zendesk.com/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="flex items-center"
            >
              <span
                className="whitespace-nowrap text-darkCustom text-14-light"
                data-testid="txt"
              >
                Support
              </span>
            </div>
          </a>
        </div>
      </div>
      <div
        className="hidden h-4 w-[1px] bg-neutral-500 sm:mx-2 sm:block"
      />
      <div
        className="font-regular uppercase xl:w-full hover:opacity-50"
      >
        <a
          href="/auth/login"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="flex items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 16,
                }
              }
            />
            <span
              className="whitespace-nowrap text-darkCustom text-14-light"
              data-testid="txt"
            >
              Sign in
            </span>
          </div>
        </a>
      </div>
      <div
        className="hidden sm:block relative w-fit"
        data-headlessui-state=""
      >
        <button
          aria-expanded={false}
          className="flex items-center justify-between p-2"
          data-headlessui-state=""
          id="headlessui-popover-button-:r4a:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          type="button"
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 16,
              }
            }
          />
          <span
            className="text-14-light mr-2 whitespace-nowrap text-sm uppercase text-darkCustom"
          >
            English
          </span>
          <div
            style={
              Object {
                "height": undefined,
                "width": 8,
              }
            }
          />
        </button>
      </div>
    </div>
    <button
      className="flex items-center justify-center rounded-full hover:bg-opacity-60 tour-menu-button block sm:hidden"
      disabled={false}
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "height": 16,
            "width": 28,
          }
        }
      />
    </button>
  </section>
</header>
`;
